data/usersCode/chaluu/question2/error.txt
/home/gauravghati/clash2/data/usersCode/chaluu/question2/code2-1.cpp:1:1: error: ‘uyfcghjbknmhghg’ does not name a type
 uyfcghjbknmhghg
 ^~~~~~~~~~~~~~~
